# cirkit

./: .gitignore  .gitmodules  .readthedocs.yml  CITATION.cff  README.md  example.py  mkdocs.yml  pyproject.toml
.github/workflows/: check.yml  lint.yml  python-publish.yml  static-check.yml  tests.yml
benchmark/: README.md  benchmark_juice_pcs.jl  benchmark_rat_pcs.jl  install_submodule.sh  quad_tree_stdec_28_28.json  submodule-usage.md
benchmark/cirkit/: README.md  run_cirkit.py
benchmark/juice.jl/: README.md  run_benchmark.jl
benchmark/pyjuice/: README.md  load_rg.py  run_benchmark.py  run_pyjuice.py
benchmark/rgraphs/: pd_28x28_d5.json  pd_28x28_d7.json  qt_28x28.json  rbt_784_d4_r16.json
benchmark/utils/: __init__.py  gpu_benchmark.py
cirkit/: __init__.py  pipeline.py
cirkit/atlas/: integrate.py
cirkit/backend/: __init__.py  base.py  compiler.py  registry.py
cirkit/backend/torch/: circuits.py  compiler.py  graph.py  initializers.py  models.py  queries.py  rules.py  semiring.py  utils.py
cirkit/einet/: EinsumLayer.py  _EinsumLayer.py  _Layer.py  _build_einet.py.bak  _ef_array.py  _einet.py  _leaf_layer.py  _unused.py.bak  _utils.py  ef_array.py  einet.py  input_layer.py  layer.py  leaf_layer.py  mixing_layer.py  sum_layer.py  utils.py
cirkit/einet/einsum_layer/: __init__.py  _extra_impl.py.bak  cp_einsum_layer.py  generic_einsum_layer.py
cirkit/einet/exp_family/: __init__.py  binomial_array.py  binomial_input_layer.py  categorical_array.py  exp_family_array.py  normal_array.py
cirkit/layers/: __init__.py  _build_einet.py.bak  layer.py  mixing.py  mixing_layer.py  scope.py  sum.py
cirkit/layers/einsum/: __init__.py  _extra_impl.py.bak  cp.py  einsum.py  mixing.py
cirkit/layers/einsum_layer/: cp_einsum_layer.py  generic_einsum_layer.py
cirkit/layers/exp_family/: __init__.py  binomial.py  categorical.py  exp_family.py  normal.py
cirkit/layers/exp_family_input_layer/: __init__.py  categorical_input_layer.py  exp_family_input_layer.py  normal_input_layer.py
cirkit/layers/factorized/: __init__.py  cp.py
cirkit/layers/inner/: __init__.py  inner.py  product.py  sum.py  sum_product.py
cirkit/layers/input/: __init__.py  constant.py  input.py  integral.py  param_constant.py  univariate.py
cirkit/layers/sum_product/: __init__.py  base.py  cp.py  cp_collapsed.py  cp_shared.py  sum_product.py  tucker.py
cirkit/model/: functional.py  tensorized_circuit.py
cirkit/models/: __init__.py  compiler.py  einet.py  functional.py  tensorized_circuit.py
cirkit/models/pcs/: __init__.py  (+1 more)
cirkit/new/: __init__.py
cirkit/region_graph/: __init__.py  _graph.py  _serialization.py  _unused.py.bak  graph.py  poon_domingos.py  poon_domingos_structure.py  quad_tree.py  random_binary_tree.py  region_graph.py  rg_node.py  serialization.py  utils.py
cirkit/reparams/: __init__.py  binary.py  composed.py  ef.py  exp_family.py  leaf.py  normalized.py  reparam.py  unary.py
cirkit/symbolic/: __init__.py  block.py  circuit.py  dtypes.py  functional.py  initializers.py  io.py  layers.py  metadata.py  operators.py  parameters.py  params.py  registry.py  sym_circuit.py  sym_layers.py  sym_params.py  symb_circuit.py  symb_layers.py  symb_op.py  symb_params.py  symbolic_circuit.py  symbolic_layer.py  transformations.py  utils.py
cirkit/symbolic_circuit/: __init__.py  symbolic_node.py
cirkit/templates/: __init__.py  _factories.py  data_modalities.py  pgms.py  tensor_factorizations.py  utils.py
cirkit/tensorized/: __init__.py  compiler.py  models.py
cirkit/utils/: __init__.py  algorithms.py  conditional.py  exceptions.py  label.py  log_trick.py  ordered_set.py  orderedset.py  random.py  random_ctx.py  reparams.py  reproducibility.py  scope.py  shape.py  type_aliases.py
docs/: index.md
docs/api/: index.md
docs/css/: style.css
docs/handbook-cirkit-torch-compiler/: compilation.md  folding.md  handbook.md  optimization.md  optimization_implemented.md
docs/javascripts/: katex.js
docs/notebooks/: compilation-options.ipynb  compression-cp-factorization.ipynb  generative-vs-discriminative-circuit.ipynb  learning-a-circuit-with-pic.ipynb  learning-a-circuit.ipynb  learning-a-gaussian-mixture-model.ipynb  logic-circuits.ipynb  region-graphs-and-parametrisation.ipynb  sum-of-squares-circuits.ipynb
notebooks/: README.md  compilation-options.ipynb  complex-squared-npcs.ipynb  compression-cp-factorization.ipynb  conditional-circuits.ipynb  datasets.py  digits-sampling.ipynb  digits.ipynb  generative-circuit.ipynb  generative-vs-discriminative-circuit.ipynb  how-to-add-an-input-layer.ipynb  how-to-add-an-operator.ipynb  learning-a-circuit-with-pic.ipynb  learning-a-circuit.ipynb  learning-a-gaussian-mixture-model.ipynb  logic-circuits.ipynb  map.ipynb  mixing-circuits-and-normalizing-flows.ipynb  moons.ipynb  non-negative-cp-factorization.ipynb  real-squared-npcs.ipynb  region-graphs-and-parametrisation.ipynb  region-graphs.ipynb  sampling.ipynb  semantic-loss.ipynb  semantic-probabilistic-layer.ipynb  sos-npcs.ipynb  squared-npcs.ipynb  sum-of-squares-circuits.ipynb  sum-of-squares.ipynb  synthetic.ipynb
scripts/: check.sh  coverage.sh  format.sh  generate_api_pages.py  lint.sh
tests/: conftest.py  einet_tests.py  floats.py  test_einet.py  test_einet_small.py  test_region_graph.py  test_rg_node.py  test_utils.py
tests/data_modalities/: test_tabular_data.py
tests/model/: test_tensorized_circuit.py  test_utils.py
tests/models/: test_einet.py  test_utils.py
tests/region_graph/: test_poon_domingos.py  test_quad_tree.py  test_random_binary_tree.py  test_region_graph.py  test_rg_node.py
tests/symbolic/: test_build_circuit.py  test_circuit.py  test_circuit_operators.py  test_from_region_graph.py  test_symbolic_circuit.py  test_symbolic_layer.py  test_utils.py  test_utils_new.py
tests/symbolic_circuit/: test_symbolic_node.py
tests/templates/: test_data_modalities.py  test_pgms.py  test_tensor_factorizations.py
tests/tensorized/: test_tensorized_circuit.py  test_utils.py
tests/utils/: test_batch_fwad.py  test_random_ctx.py  test_reparams.py
(+380 files in other folders)
