[build-system]
requires = ["setuptools >= 64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cirkit*"]

[project]
name = "cirkit"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = { text="GPLv3" }
keywords = []
authors = [
  { name="The APRIL Lab." }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
]
dependencies = [
  "torch>=2.0.0",
  "numpy>=1.24.0"
]

[project.optional-dependencies]
lint = [
  "black~=23.0",
  "pylint",
  "mypy",
  "pydocstyle[toml]"
]
test = [
  "pytest",
  "pytest-cov"
]
benchmark = [
  "numba>=0.57.0rc1"
]

[project.urls]
"Homepage" = "https://github.com/april-tools/cirkit"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

# Following are configs for code quality checks. Any change should be put into
# a separate PR and merge with care. Rules can only be modified after discussion.

# code style
[tool.black]
line-length = 100
target-version = ['py38']
required-version = 23

# import style
[tool.isort]
py_version = 39
profile = "black"
line_length = 100
balanced_wrapping = true

# doc style
[tool.pydocstyle]
convention = "google"
add_select = "D204,D400,D401,D404"
add_ignore = "D100,D104"

# general linting
[tool.pylint.main]
jobs = 0
py-version = "3.8"
load-plugins = [
  "pylint.extensions.bad_builtin",
  "pylint.extensions.broad_try_clause",
  "pylint.extensions.check_elif",
  "pylint.extensions.code_style",
  "pylint.extensions.comparetozero",
  "pylint.extensions.comparison_placement",
  "pylint.extensions.confusing_elif",
  "pylint.extensions.consider_refactoring_into_while_condition",
  "pylint.extensions.consider_ternary_expression",
  "pylint.extensions.dict_init_mutate",
  "pylint.extensions.docparams",
  "pylint.extensions.docstyle",
  "pylint.extensions.dunder",
  "pylint.extensions.empty_comment",
  "pylint.extensions.emptystring",
  "pylint.extensions.eq_without_hash",
  "pylint.extensions.for_any_all",
  "pylint.extensions.mccabe",
  "pylint.extensions.no_self_use",
  "pylint.extensions.overlapping_exceptions",
  "pylint.extensions.private_import",
  "pylint.extensions.redefined_loop_name",
  "pylint.extensions.redefined_variable_type",
  "pylint.extensions.set_membership",
  "pylint.extensions.typing",
  "pylint.extensions.while_used"
]
[tool.pylint."messages control"]
disable = [
  "missing-module-docstring",
  "no-member"
]
[tool.pylint.basic]
argument-rgx = '([^\W\dA-Z][^\WA-Z]*|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)$'
attr-rgx = '([^\W\dA-Z][^\WA-Z]*|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)$'
variable-rgx = '([^\W\dA-Z][^\WA-Z]*|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)$'
[tool.pylint.parameter_documentation]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false
default-docstring-type = "google"

# type checking
[tool.mypy]
python_version = 3.8
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = false
strict_concatenate = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable"
]
